CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/participante_sales__c.object-meta.xml
<CustomObject>
    <label>Participante</label>
    <nameField>
        <label>Nombre Participante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>