CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/Cliente_sales__c.field-meta.xml
<CustomField>
    <fullName>Cliente_sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes</relationshipLabel>
    <relationshipName>Participantes</relationshipName>
    <type>Lookup</type>
</CustomField>