CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/correo_sales__c.field-meta.xml
<CustomField>
    <fullName>correo_sales__c</fullName>
    <description>Campo para almacenar el correo electrónico del participante de hipotecario.</description>
    <label>Correo</label>
    <type>Email</type>
</CustomField>