CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/estado_participante_sales__c.field-meta.xml
<CustomField>
    <fullName>estado_participante_sales__c</fullName>
    <description>Campo para indicar si el participante aún forma parte o no del crédito hipotecario.</description>
    <label>Estado Participante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>No Vigente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>