CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/first_name_sales__c.field-meta.xml
<CustomField>
    <fullName>first_name_sales__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>