CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/last_name_sales__c.field-meta.xml
<CustomField>
    <fullName>last_name_sales__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>