CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/middle_name_sales__c.field-meta.xml
<CustomField>
    <fullName>middle_name_sales__c</fullName>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>