CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/motivo_desactivacion_sales__c.field-meta.xml
<CustomField>
    <fullName>motivo_desactivacion_sales__c</fullName>
    <label>Motivo Desactivación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decisión de cliente</fullName>
            </value>
            <value>
                <fullName>Rechazado por riesgo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>