CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/opportunity_participante_sales__c.field-meta.xml
<CustomField>
    <fullName>opportunity_participante_sales__c</fullName>
    <description>Campo que relaciona el objeto Participante con el objeto Oportunidad.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participantes</relationshipLabel>
    <relationshipName>participantes_sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>