CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/remuneracion_sales__c.field-meta.xml
<CustomField>
    <fullName>remuneracion_sales__c</fullName>
    <label>Remuneración</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>