CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/rol_participante_sales__c.field-meta.xml
<CustomField>
    <fullName>rol_participante_sales__c</fullName>
    <description>Campo para almacenar el rol del participante en el crédito hipotecario.</description>
    <label>Rol Participante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Co Deudor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>