CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/rut_sales__c.field-meta.xml
<CustomField>
    <fullName>rut_sales__c</fullName>
    <description>Campo para almacenar el rut del participante de hipotecario.</description>
    <label>Rut</label>
    <length>11</length>
    <type>Text</type>
</CustomField>