CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/telefono_fijo_sales__c.field-meta.xml
<CustomField>
    <fullName>telefono_fijo_sales__c</fullName>
    <description>Campo para almacenar el número de red fija del participante.</description>
    <label>Teléfono Fijo</label>
    <type>Phone</type>
</CustomField>