CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/telefono_movil_sales__c.field-meta.xml
<CustomField>
    <fullName>telefono_movil_sales__c</fullName>
    <description>Campo para almacenar el número móvil del participante de hipotecario.</description>
    <label>Teléfono Móvil</label>
    <type>Phone</type>
</CustomField>