CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/fields/tipo_documento_sales__c.field-meta.xml
<CustomField>
    <fullName>tipo_documento_sales__c</fullName>
    <label>Tipo Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>