CNSDEVCOLECT/force-app/main/default/objects/participante_sales__c/validationRules/cnf_sal_rv_modificar_participante.validationRule-meta.xml
<ValidationRule>
    <fullName>cnf_sal_rv_modificar_participante</fullName>
    <active>true</active>
    <description>Regla de validación que controla la modificación del cliente asociado al Participante.</description>
    <errorConditionFormula>AND(
$Setup.Consorcio_Org__c.Sales_project__c = TRUE,
$Setup.Consorcio_Org__c.Validation_rules__c =TRUE,
ISCHANGED( Cliente_sales__c ),
TEXT(opportunity_participante_sales__r.StageName) = &quot;Contacto&quot;
)</errorConditionFormula>
    <errorMessage>RV_PAR No puede modificar el Cliente asociado al Participante.</errorMessage>
</ValidationRule>